# test_github_actions

./: LICENSE  pyproject.toml  requirements.txt
.github/workflows/: blank.yml
src/config/app/: main.py
src/main/: test.txt
