[project]
name = "test_github_actions"
description = "example"
version = "0.1.0"
authors = [
    { name = "Jakob Wall", email = "jakob.wall@outlook.com" }
]
dependencies = [
    "pyspark[ml]",
    "sklearn"
]

[project.optional-dependencies]
dev = [
    "tox",
    "pre-commit",
    "bump2version"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]